Refactored some code, made all "game items" dynamically created, removed extra "game item" bug, fixed 97% of screen jumping on page loading

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -719,6 +719,7 @@ html {
 		}
 	}
 	main .games .games-margin .container {
+		height: max-content;
 		grid-template-columns: repeat(2, 42.5vw);
 		.game-item img {
 			width: 42.5vw;
